Worked out a simple reverse proxy, that will enable cross domain Ajax calls from client browsers.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 platforms/android/assets/www/index.html
 platforms/ios/www/index.html
 .DS_Store
+*/node_modules/*
 #platforms/android/www/*
 #platforms/android/bin/*
 #platforms/android/gen/*
